set backround with better naming

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Set Background Color</h1>
 
-<p>Click button to change background color to blue</p>
+<p>Click button to change background color</p>
 <button class="btn pbSetColor">Push Me!</button>
 <input type="text" class="getColor">
 
